[package]
name = "riff--"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Extracts RIFF files from an unstructured binary. Bad code."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/riff--"
homepage = "https://github.com/Tamschi/riff--/tree/v0.0.1"
documentation = "https://docs.rs/riff--/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
resolver = "2"
publish = false

[[bin]]
name = "riff--"
path = "src/main.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/riff--" }
is-it-maintained-open-issues = { repository = "Tamschi/riff--" }
maintenance = { status = "experimental" }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.23"
